<resources>
    <string name="app_name">FrameDemo</string>

    <string name="billing_error_toast">The google service is not available, please check your account or the network and try again later.</string>
    <string name="subscription_introduction">Recurring billing. Cancel anytime.\n
        Payment will be charged to Google Pay Account at confirmation of purchase.\n
        Subscription automatically renews unless auto-renew is turned off at least 24-hours before the end of the current. Account will be charged for renewal within 24-hours prior to the end of the current period, and identify the cost of the renewal.\n
        You can enjoy advanced features after subscribing.\n
        Subscriptions may be managed by the user and auto-renewal may be turned off by going to the user\'s Account Settings after purchase.\n
        Any unused portion of a free trial period, if offered, will be forfeited when the user purchases a subscription to that publication, where applicable.\n
        Length of Subscription: 1 Month\n
        Price: Free for 3 days, then $3.99/Month after free trial.\n
        Length of Subscription: 1 Year\n
        Price: Free for 3 days, then $39.99/Year after free trial.</string>
    <string name="subscription_save">SAVE 20%</string>
    <string name="continue_to_free_trail">Continue to free trail</string>
    <string name="subscription_yearly_price">Free for 3 days,then$39.99/year</string>
    <string name="subscribe_monthly">Subscribe Monthly</string>
    <string name="subscribe_monthly_price">Free for 3 days,then$3.99/month</string>
    <string name="subscribe_free_version"><u>Free Version</u></string>
    <string name="subscribe_completed">Successfully subscribed</string>
    <string name="subscribe_reason_no_ads">No Ads</string>
    <string name="subscribe_reason_backup">SMS Backup &amp; Restore</string>
    <string name="subscribe_reason_number_location">Number Location Lookup</string>

    <string name="agree_privacy_policy_user_agreement">Privacy Policy and User Agreement</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="user_agreement">User Agreement</string>

    <string name="login_hint_b">Enter the password</string>
    <string name="enter_account_tips">Enter account</string>
    <string name="login_privacyPolicy_hint">Select the Privacy Policy</string>

    <string name="new_function">New Function :</string>
    <string name="update_buttontext">Update now</string>
    <string name="cancel">Cancel</string>

    <string name="this_is_the_latest_version">This is the latest version</string>
    <string name="about_activity_new_version_tips">NEW!</string>
    <string name="about_update_version">Update Version</string>

    <string name="home">Home</string>
    <string name="my">My</string>
    <string name="introduce">\u3000\u3000本项目采用mvp + rxjava + retrofit + dagger架构，使用前需学习相关内容。
        \n\n统一功能:
        \n\nFirebase Push(Cloud Messaging):可能涉及强制、非强制升级、或者推送应用推广信息，显示其他通知、落地页等。
        \n\nFirebase Remote Config基本功能：给其他App导量、强制和非强制升级（需要应用已发布100%）。
        \n\nVersionChecker:本地记录版本变更。
        \n\nWhatsNew:利用VersionChec。
        \n\nEventLog(GA或Firebase):FaceBookSdk不再只为打点集成，因为需要做平台迁移。需要用工具类记录Event事件，并通过注释标明打点含义。
        \n\nInstallReferrer:记录分渠道信息
        \n\n彩蛋：在某个View上长按若干时长，弹出应用包名的Toast。
        \n\n隐私政策&amp;用户协议：About界面、Splash界面。
        \n\nBilling:3.0 或 4.0。
        \n\nFirebase Crashlytics。
        \n\nMMKV:轻量级数据缓存，取代SharedPreference以减少ANR。
        \n\nGooglePlayManager:跳转GooglePlay的工具类。\n
    </string>

    <string name="my_room">点击跳转 room</string>
    <string name="my_rxjava">点击跳转 rxjava</string>
    <string name="my_check_version">检测版本</string>
    <string name="my_about">关于我们</string>
    <string name="my_eggshell">彩蛋</string>
    <string name="package_temp" translatable="false">Y29tLmV4YW1wbGUuZnJhbWVkZW1v</string>

</resources>