<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="false">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:paddingBottom="30dp">

            <ImageView
                android:id="@+id/iv_bg"
                android:layout_width="match_parent"
                android:layout_height="304dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_sub_bg"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_close"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="14dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="7dp"
                android:src="@drawable/ic_pr_close"
                app:layout_constraintBottom_toBottomOf="@id/guideline"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="24dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.1" />

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginBottom="22dp"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guideline" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:text="@string/app_name"
                android:textColor="#000000"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_logo" />

            <TextView
                android:id="@+id/tv_reason_no_ads"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:drawablePadding="11dp"
                android:gravity="start"
                android:text="@string/subscribe_reason_no_ads"
                android:textColor="#000000"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/no_add"
                app:layout_constraintStart_toStartOf="@id/tv_reason_num_location"
                app:layout_constraintTop_toBottomOf="@id/tv_title" />

            <TextView
                android:id="@+id/tv_reason_backup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:drawablePadding="11dp"
                android:gravity="start"
                android:text="@string/subscribe_reason_backup"
                android:textColor="#000000"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/sms_backup"
                app:layout_constraintStart_toStartOf="@id/tv_reason_num_location"
                app:layout_constraintTop_toBottomOf="@id/tv_reason_no_ads" />

            <TextView
                android:id="@+id/tv_reason_num_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:drawablePadding="11dp"
                android:gravity="start"
                android:text="@string/subscribe_reason_number_location"
                android:textColor="#000000"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/feature_number_location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_reason_backup" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_yearly_sub"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_subscribe_btn_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_reason_num_location">

                <ImageView
                    android:id="@+id/iv_flash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_light"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="26dp"
                    android:layout_marginEnd="26dp"
                    android:layout_marginBottom="-7dp"
                    android:background="@drawable/bg_subscribe_save"
                    android:gravity="center"
                    android:paddingHorizontal="8dp"
                    android:text="@string/subscription_save"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginRight="26dp" />

                <TextView
                    android:id="@+id/tv_yearly_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/continue_to_free_trail"
                    android:textAllCaps="true"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/tv_yearly_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/tv_yearly_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subscription_yearly_price"
                    android:textColor="#CCFFFFFF"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_yearly_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_monthly_sub"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_subscribe_btn_green"
                app:layout_constraintEnd_toEndOf="@id/cl_yearly_sub"
                app:layout_constraintStart_toStartOf="@id/cl_yearly_sub"
                app:layout_constraintTop_toBottomOf="@id/cl_yearly_sub">

                <TextView
                    android:id="@+id/tv_monthly_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subscribe_monthly"
                    android:textAllCaps="true"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/tv_monthly_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/tv_monthly_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subscribe_monthly_price"
                    android:textColor="#CCFFFFFF"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_monthly_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_free"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/subscribe_free_version"
                android:textColor="#01C101"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cl_monthly_sub" />

            <TextView
                android:id="@+id/privacy_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:paddingHorizontal="15dp"
                android:text="@string/subscription_introduction"
                android:textColor="#757575"
                android:textSize="12sp"
                app:layout_constraintVertical_bias="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_free" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>